--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -38,5 +38,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>5.3.22</version>
+    </dependency>
   </dependencies>
 </project>
