Implemented AuthTokenFilter and JWT utility class

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #spring.jpa.show-sql: true
 server.port=8090
 
-
-
+#App Properties
+library.app.jwtSecret = mySecretOnly
+library.app.jwtExpirationMs = 86400000
+library.app.jwtCookieName = librarySecretKey
