--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=do02LCcBm06n5DHwPPd5
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #spring.jpa.show-sql: true
 server.port=8090
+spring.security.user.name=username
+spring.security.user.password=password1
 
 #App Properties
 library.app.jwtSecret = mySecretOnly
