--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
